--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -72,7 +72,7 @@ def myAdd(x: float, n: int) -> float:
 
 可以使用二分查找算法搜索结果，整数除法结果在 `[0, 2 ^ 31-1]` 之间。在这个区间内二分搜索，每次搜索到的结果 `mid` 使用快速加算法判断 `mid * divisor` 是否满足要求。
 
-除此之外还可以使用快速除算法，将 `a // b` 改为 `(a // (b + b)) * 2`，如果 a 和 b均为正数，计算如下
+除此之外还可以使用快速除算法，将 `a // b` 改为 `(a // (b + b)) * 2`，如果 a 和 b 均为正数，计算如下
 
 ```python
 def div(a, b):  # a 为被除数，b 为除数
@@ -533,6 +533,37 @@ def solve(n , a: List):
 	return cnt
 ```
 
+
+### 约瑟夫环问题
+
+[LCR 187. 破冰游戏 - 力扣（LeetCode）](https://leetcode.cn/problems/yuan-quan-zhong-zui-hou-sheng-xia-de-shu-zi-lcof/description/)
+
+N 个人围成一圈，从第一个人开始报数，报数到 k 的人出局，然后由下一个人重新开始报数，求出最后未出局的人
+
+如果需要求出所有的 k-1 个人不会出局的人，需要模拟整个过程
+
+而如果最后只留下一个的话，可以用递归快速求解
+
+对于 n 个人排成一圈，其编号为 `0, 1, 2, ..., k - 2, k - 1, k, ..., n-1`，当第k个人出局的时候，变成了 `0, 1, 2, ..., k - 2, k, ..., n-1`，此时进行重新编号
+
+```
+0,     1,        ..., k - 2, k, k + 1, ..., n-1    
+n - k, n - k + 1,..., n - 2, 0, 1,   , ..., n-k-1
+```
+
+如果已经求出 n-1 个人时的情况，需要进行下标的转换，即 $i_{n}=(i_{n-1}+k) \mod n$ 
+
+因此递推式可以写成 `f(n, k) = (f(n-1, k)+k) % n`
+
+如果n=1时，自然返回0
+
+```python
+def iceBreakingGame(num: int, target: int) -> int:
+	m = 0
+	for n in range(2, num+1):  # 从第2个人开始
+		m = (m + target) % n
+	return m
+```
 
 ## 数组问题
 
@@ -6062,6 +6093,30 @@ def shortestPalindrome(s: str) -> str:
 ```
 
 
+此外还有基于 KMP 的解法
+
+```python
+def shortestPalindrome(s: str) -> str:
+	n = len(s)
+	fail = [-1] * n
+	for i in range(1, n):
+		j = fail[i - 1]
+		while j != -1 and s[j + 1] != s[i]:
+			j = fail[j]
+		if s[j + 1] == s[i]:
+			fail[i] = j + 1
+	
+	best = -1
+	for i in range(n - 1, -1, -1):
+		while best != -1 and s[best + 1] != s[i]:
+			best = fail[best]
+		if s[best + 1] == s[i]:
+			best += 1
+
+	add = ("" if best == n - 1 else s[best+1:])
+	return add[::-1] + s
+```
+
 ### 最长重复子串
 
 [1044. 最长重复子串 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-duplicate-substring/)
@@ -6113,30 +6168,6 @@ def longestDupSubstring(s: str) -> str:
 	return s[start: start+length] if start != -1 else ""
 ```
 
-
-此外还有基于 KMP 的解法
-
-```python
-def shortestPalindrome(s: str) -> str:
-	n = len(s)
-	fail = [-1] * n
-	for i in range(1, n):
-		j = fail[i - 1]
-		while j != -1 and s[j + 1] != s[i]:
-			j = fail[j]
-		if s[j + 1] == s[i]:
-			fail[i] = j + 1
-	
-	best = -1
-	for i in range(n - 1, -1, -1):
-		while best != -1 and s[best + 1] != s[i]:
-			best = fail[best]
-		if s[best + 1] == s[i]:
-			best += 1
-
-	add = ("" if best == n - 1 else s[best+1:])
-	return add[::-1] + s
-```
 
 
 ### 删除无效括号
@@ -6228,6 +6259,23 @@ def decimal2Binary(num):
     return res
 ```
 
+
+### 汉诺塔问题
+
+[面试题 08.06. 汉诺塔问题 - 力扣（LeetCode）](https://leetcode.cn/problems/hanota-lcci/description/)
+
+```python
+def hanota(A: List[int], B: List[int], C: List[int]) -> None:
+	def hanoi(n, A, B, C):
+		if n == 1:
+			C.append(A.pop())
+			return
+		
+		hanoi(n-1, A, C, B) # 将 n-1 个盘子从 A 搬到 B 中
+		C.append(A.pop())   # 将最后一个盘子从 A 搬到 C
+		hanoi(n-1, B, A, C) # 将 n-1 个盘子从 B 搬到 C 中
+	hanoi(len(A), A, B, C)
+```
 
 ### 组合总和
 
@@ -9996,6 +10044,32 @@ def solve(root):
 ```
 
 
+### 二叉树的最小深度
+
+[111. 二叉树的最小深度 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-depth-of-binary-tree/description/)
+
+一种方法是直接用BFS，如果哪个结点没有子结点了，就返回深度。另外一种是DFS，这里需要注意不能直接返回 `min(left, right)+1`，这只在左右子树均为空或者均不为空时才正确，当一个子树为空时，要返回不为空的子树的深度
+
+```python
+def minDepth(root: Optional[TreeNode]) -> int:
+	def dfs(root):
+		if root is None:
+			return 0
+		
+		left = dfs(root.left)
+		right = dfs(root.right)
+
+		if root.left and root.right:
+			return min(left, right) + 1
+		if root.left is None and root.right is None:
+			return 1
+		# 某个子树为空，返回不为空的子树高度
+		return max(left, right) + 1
+	
+	depth = dfs(root)
+	return depth
+```
+
 ### 最近公共祖先
 
 [236. 二叉树的最近公共祖先 - 力扣（LeetCode）](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/description/)
@@ -10066,6 +10140,38 @@ def solve(root):
 ```
 
 
+### 恢复二叉搜索树
+
+[99. 恢复二叉搜索树 - 力扣（LeetCode）](https://leetcode.cn/problems/recover-binary-search-tree/description/)
+
+给定二叉搜索树的根节点 `root` ，该树中的恰好两个节点的值被错误地交换。请在不改变其结构的情况下，恢复这棵树。
+
+使用中序遍历的迭代形式遍历结点，然后记录下一个值比上一个值更小时的位置
+
+```python
+def recoverTree(root: Optional[TreeNode]) -> None:
+	stack = []
+	x, y, pred = None, None, None
+
+	while stack or root is not None:
+		while root is not None:
+			stack.append(root)
+			root = root.left
+		
+		root = stack.pop()
+		# 如果当前值小于前一个值
+		if pred is not None and root.val < pred.val:
+			y = root
+			if x is None:
+				x = pred
+			else:
+				break
+		pred = root
+		root = root.right
+	
+	x.val, y.val = y.val, x.val
+```
+
 ### 翻转二叉树
 
 [226. 翻转二叉树 - 力扣（LeetCode）](https://leetcode.cn/problems/invert-binary-tree/description/)
@@ -10082,6 +10188,33 @@ def solve(root):
         if root.right:
             dfs(root.right)
     dfs(root)
+```
+
+
+### 二叉树剪枝
+
+[814. 二叉树剪枝 - 力扣（LeetCode）](https://leetcode.cn/problems/binary-tree-pruning/description/)
+
+给定一个只包含0和1 的二叉树，返回移除所有不包含 1 的子树的原二叉树
+
+如果从上到下，判断每个子树是否包含1，工作量比较大，因此可以从下到上，如果为叶子节点，并且为 0 就删除。
+
+
+```python
+def pruneTree(root: Optional[TreeNode]) -> Optional[TreeNode]:
+	def dfs(root):
+		if root is None:
+			return None
+		
+		root.left = dfs(root.left)
+		root.right = dfs(root.right)
+		# 如果为叶子节点，并且值为0
+		if root.left is None and root.right is None and root.val == 0:
+			return None
+		return root
+	
+	root = dfs(root)
+	return root
 ```
 
 
