--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -355,12 +355,7 @@ class Solution:
 
 ### 计算整数的二进制中1的个数
 
-如 9 的二进制为 1001， 1的个数为2，可以使用查找表解决这一问题
-
-查找表是一个数组，一般事先计算好查找表，在后续使用时直接在查找表中索引即可，可以加速运算。
-
-如计算DFT时，事先将旋转因子$W_N^{kn}$计算好，对于长度为 N 的DFT，查找表需要存储 N 个复数（$W_N^0$，$W_N^1$，...，$W_N^{N-1}$）
-
+最简单的方法为右移数字，判断最后一位是否为1，时间复杂度为 log(n)
 
 ```python
 def countSetBits(n):
@@ -371,7 +366,18 @@ def countSetBits(n):
     return count
 ```
 
-时间复杂度为 log(n)
+
+此外还可以通过 `n & (n-1)` 来消除最右侧的 1 来计算 1 的个数
+
+```python
+def countSetBits(n):
+    count = 0
+    while (n != 0):
+        n &= n - 1
+        count += 1
+    return count
+```
+
 
 使用查找表可以将时间复杂度降为1，查找表是一个256位的数组，存储0-255这256个数字中1的个数
 
@@ -410,6 +416,83 @@ for i in range(n):
 ```
 
 
+
+### 两整数之和
+
+[371. 两整数之和 - 力扣（LeetCode）](https://leetcode.cn/problems/sum-of-two-integers/description/)
+
+给你两个整数 `a` 和 `b` ，**不使用** 运算符 `+` 和 `-` ​​​​​​​，计算并返回两整数之和。
+
+
+使用位运算计算两数之和，如果两数之和没有进位，那么直接用 `a ^ b` 计算即可，如果有进位那么进位可以表示为 `(a & b) << 1`，进位再与结果相加。
+
+> 这里需要注意一个问题 Python 中整数类型是无限长的，因此怎么左移位也不会溢出，因此需要额外处理，模拟用补码表示的32位有符号整数类型，将整数对 $2^{32}$ 取模，使得高位为0，然后再换算为Python中的整数
+
+
+```python
+def getSum(self, a: int, b: int) -> int:
+	MASK1 = 4294967296  # 2^32
+	MASK2 = 2147483648  # 2^31
+	MASK3 = 2147483647  # 2^31
+	a %= MASK1
+	b %= MASK1
+	while b != 0:
+		carry = ((a & b) << 1) % MASK1 # 计算进位
+		a = (a ^ b) % MASK1
+		b = carry
+	
+	if a & MASK2:   # 如果 a 为负数
+		return ~((a ^ MASK2) ^ MASK3)
+	else:
+		return a
+```
+
+
+### 交替位二进制数
+
+[693. 交替位二进制数 - 力扣（LeetCode）](https://leetcode.cn/problems/binary-number-with-alternating-bits/description/)
+
+给定一个正整数，检查它的二进制表示是否总是 0、1 交替出现：换句话说，就是二进制表示中相邻两位的数字永不相同。
+
+先向右移一位再异或，如果交替出现应该是全1，通过 `n & (n+1)==0` 判断是否全1。
+
+```python
+def hasAlternatingBits(n: int) -> bool:
+	n = n ^ (n >> 1)
+	return (n & (n+1)) == 0
+```
+
+
+### 颠倒二进制位
+
+[190. 颠倒二进制位 - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-bits/description/)
+
+颠倒给定的 32 位无符号整数的二进制位。
+
+如果考虑多次输入，可以通过分治的方法解决（Python中执行的效率不是特别高）
+
+```python
+def reverseBits(n: int) -> int:
+	M = 4294967296
+	M1 = 0X55555555
+	M2 = 0X33333333
+	M4 = 0X0F0F0F0F
+	M8 = 0X00FF00FF
+
+	n = ((n >> 1) & M1) % M | ((n & M1) << 1) % M
+	n = ((n >> 2) & M2) % M | ((n & M2) << 2) % M
+	n = ((n >> 4) & M4) % M | ((n & M4) << 4) % M
+	n = ((n >> 8) & M8) % M | ((n & M8) << 8) % M
+
+	return (n >> 16) % M | (n << 16) % M
+```
+
+
+### 0 到 n-1 中缺失的数字
+
+假设有一个长度为 n - 1 的数组，其中包括了 0 到 n-1 范围内中的n-1个数字，即只有一个数字不在，求出该数字。
+
+常规的方法是先排序，然后遍历即可。更好的方法是对数组中值取异或，再对 0 到 n-1 这 n 个数字取异或 `^`，这样相当于缺失的数字只出现一次，而其它数字出现两次，这样最后异或的结果就是缺失数字
 
 
 ## 数学问题
@@ -564,6 +647,36 @@ def iceBreakingGame(num: int, target: int) -> int:
 		m = (m + target) % n
 	return m
 ```
+
+
+
+### 所有蚂蚁掉下来前的最后一刻
+
+[1503. 所有蚂蚁掉下来前的最后一刻 - 力扣（LeetCode）](https://leetcode.cn/problems/last-moment-before-all-ants-fall-out-of-a-plank/description/)
+
+有一块木板，长度为 `n` 个 **单位** 。一些蚂蚁在木板上移动，每只蚂蚁都以 **每秒一个单位** 的速度移动。其中，一部分蚂蚁向 **左** 移动，其他蚂蚁向 **右** 移动。
+
+当两只向 **不同** 方向移动的蚂蚁在某个点相遇时，它们会同时改变移动方向并继续移动。假设更改方向不会花费任何额外时间。
+
+而当蚂蚁在某一时刻 `t` 到达木板的一端时，它立即从木板上掉下来。
+
+给你一个整数 `n` 和两个整数数组 `left` 以及 `right` 。两个数组分别标识向左或者向右移动的蚂蚁在 `t = 0` 时的位置。请你返回最后一只蚂蚁从木板上掉下来的时刻。
+
+如果去模拟蚂蚁移动的过程会很麻烦，可以这样思考当两个蚂蚁相遇时它们改变方向移动，其实就相当于两个蚂蚁穿过彼此移动，如 a 和 b 相遇，b 后面要走的路实际上是 a 要走的路，类似地，a 后面要走的路实际上是 b 要走的路
+
+```python
+def getLastMoment(n: int, left: List[int], right: List[int]) -> int:
+	if len(left) == 0:
+		max_time = 0
+	else:
+		max_time = max(left)
+
+	for i in range(len(right)):
+		max_time = max(max_time, n - right[i])
+	return max_time
+```
+
+## 
 
 ## 数组问题
 
