--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -648,6 +648,27 @@ def iceBreakingGame(num: int, target: int) -> int:
 	return m
 ```
 
+类似的题目还有 [390. 消除游戏 - 力扣（LeetCode）](https://leetcode.cn/problems/elimination-game/description/)
+
+这道题与约瑟夫环有类似的解决方法，找到下标的转换公式
+
+当 n 为偶数时，$i_{n} = n - 1 - 2 * i_{n//2}$
+
+当 n 为奇数时，$i_{n} = n - 2 - 2 * i_{n//2}$
+
+```python
+def lastRemaining(self, n: int) -> int:
+	def solve(n):
+		if n == 1:
+			return 0
+		
+		if n & 1 == 0:
+			return (n - 1 - 2 * solve(n // 2))
+		else:
+			return (n - 2 - 2 * solve(n // 2))
+	last = solve(n)
+	return last + 1
+```
 
 
 ### 所有蚂蚁掉下来前的最后一刻
@@ -676,7 +697,81 @@ def getLastMoment(n: int, left: List[int], right: List[int]) -> int:
 	return max_time
 ```
 
-## 
+
+
+### 整数拆分
+
+[343. 整数拆分 - 力扣（LeetCode）](https://leetcode.cn/problems/integer-break/description/)
+
+给定一个正整数 `n` ，将其拆分为 `k` 个 **正整数** 的和（ `k >= 2` ），并使这些整数的乘积最大化。
+
+该问题可以通过动态规划求解，令 `dp[i]` 为正整数 i 的最大乘积，从 1 到 i - 1 遍历 k
+
+`dp[i]=max(dp[i], k*dp[i-k], k * (i-k))`
+
+该问题还可以这样思考，对于 n > 4 的情况下，我们无需大于等于 4 的因子，对于一个因子 a 大于等于 4，可以分解成 2 和 a-2，2 * (a-2) = 2a - 4 >= a，因此只需要 1、2、3 这三个因子即可。而 1 显然不是一个好的因子，所以范围被局限在 2 和 3 这两个因子中，由于`3 * 3 > 2 * 2 * 2`，因此 3 越多越好，除非分解到最后剩下 4，需要被分解为 2 * 2
+
+```python
+def integerBreak(self, n: int) -> int:
+	if n == 2: return 1
+	if n == 3: return 2
+	if n == 4: return 4
+	res = 1
+	while n > 4:
+		n -= 3
+		res *= 3
+	res *= n
+	return res
+```
+
+或者通过余数来判断
+
+```python
+def integerBreak(self, n: int) -> int:
+	if n == 2: return 1
+	if n == 3: return 2
+	reminder = n % 3
+	num = n // 3
+	if reminder == 1:
+		return 3 ** (num - 1) * 4
+	if reminder == 2:
+		return 3 ** num * 2
+	else:
+		return 3 ** num
+```
+
+
+### 检查数组对是否可以被 k 整除
+
+[1497. 检查数组对是否可以被 k 整除 - 力扣（LeetCode）](https://leetcode.cn/problems/check-if-array-pairs-are-divisible-by-k/description/)
+
+给你一个整数数组 `arr` 和一个整数 `k` ，其中数组长度是偶数，值为 `n` 。现在需要把数组恰好分成 `n / 2` 对，以使每对数字的和都能够被 `k` 整除。如果存在这样的分法，请返回 `true` ；否则，返回 `false`。
+
+暴力求解的复杂度过高，可以采用如下的方法。由 `(a + b) % k == 0` 可得 `(a % k + b % k) % k == 0` ，即 `a % k + b % k == k`，因此先对数组中的所有数对 k 取余，再统计每个余数出现的次数，判断互补的余数的出现次数是否相等
+
+>python 中可以直接对负数取余数得到[0, k) 范围内的数字，而对于 C++等语言来说需要加上在取余的结果后面加上 k
+
+```python
+def canArrange(arr: List[int], k: int) -> bool:
+	n = len(arr)
+	for i in range(n):
+		arr[i] = arr[i] % k
+	
+	freq = dict(Counter(arr))
+	for key in freq.keys():
+		if key == k - key or key == 0:
+			if freq[key] & 1 != 0:
+				return False
+		else:
+			if k - key not in freq:
+				return False
+			if freq[k-key] != freq[key]:
+				return False
+	return True
+```
+
+
+
 
 ## 数组问题
 
@@ -1633,6 +1728,63 @@ class NumArray:
 ```
 
 此外还有树状数组的解法
+
+
+### 最佳观光组合
+
+[1014. 最佳观光组合 - 力扣（LeetCode）](https://leetcode.cn/problems/best-sightseeing-pair/description/)
+
+给你一个正整数数组 `values`，其中 `values[i]` 表示第 `i` 个观光景点的评分，并且两个景点 `i` 和 `j` 之间的 **距离** 为 `j - i`。
+
+一对景点（`i < j`）组成的观光组合的得分为 `values[i] + values[j] + i - j` ，也就是景点的评分之和 **减去** 它们两者之间的距离。返回一对观光景点能取得的最高分。
+
+该问题可以转换为求历史最大的 `values[i]+i`，然后和当前的 `values[i]-i` 相加更新答案
+
+```python
+def maxScoreSightseeingPair(values: List[int]) -> int:
+	n = len(values)
+	cur = values[0]
+	ans = 0
+	for i in range(1, n):
+		ans = max(ans, cur + values[i]-i)
+		cur = max(cur, values[i]+i)
+	return ans
+```
+
+
+### 等差数列划分
+
+[413. 等差数列划分 - 力扣（LeetCode）](https://leetcode.cn/problems/arithmetic-slices/)
+
+如果一个数列 **至少有三个元素** ，并且任意两个相邻元素之差相同，则称该数列为等差数列。
+
+- 例如，`[1,3,5,7,9]`、`[7,7,7,7]` 和 `[3,-1,-5,-9]` 都是等差数列。
+
+给你一个整数数组 `nums` ，返回数组 `nums` 中所有为等差数组的 **子数组** 个数。
+
+**子数组** 是数组中的一个连续序列。
+
+
+首先遍历最前面两个连续的索引，然后重新赋值一个变量 j，计算之后的序列中有多少个等差数列，这里用 while 判断，只要满足等差就一直往后
+
+```python
+def numberOfArithmeticSlices(nums: List[int]) -> int:
+	n = len(nums)
+	if n <= 2: return 0
+	cnt = 0
+	for i in range(2, n):
+		j = i
+		curr = 0
+		# 计算 i 和 i 之后有多少个等差数列
+		while j < n and nums[j] - nums[j-1] == nums[j-1] - nums[j-2]:
+			curr += 1
+			j += 1
+		cnt += curr
+	return cnt
+```
+
+
+动态规划的方法如下
 
 
 
@@ -4409,7 +4561,7 @@ def max_sliding_window(arr, k):
     return ans
 ```
 
-还可以用一个双向队列来保存，队首元素为当前窗口最大的值，如果新的值比队尾元素大，就弹出队尾元素
+还可以用一个双向队列来保存，队首元素为当前窗口最大的值，如果新的值比队尾元素大，就弹出队尾元素（需要用while）
 
 ```python
 def maxSlidingWindow(nums, k: int):
@@ -13681,6 +13833,11 @@ def solve(start, end):
     return cnt
 ```
 
+类似的问题还有 [435. 无重叠区间 - 力扣（LeetCode）](https://leetcode.cn/problems/non-overlapping-intervals/description/)，按照右端点排序，先选择右端点最小的区间，然后判断下一个区间是否可选，如果可选，更新右端点，统计选择的区间数。
+
+类似的还有 [452. 用最少数量的箭引爆气球 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-number-of-arrows-to-burst-balloons/description/)，先按照右端点排序，先对第一个气球的右端点射出一只箭，计算这只箭能够覆盖的区间范围。如果不能覆盖，则再对着右端点射出一只箭。
+
+
 
 ### 到达数组末尾的最小跳跃次数
 
@@ -14051,6 +14208,86 @@ def candy(ratings: List[int]) -> int:
 ```
 
 
+### 重构字符串
+
+[767. 重构字符串 - 力扣（LeetCode）](https://leetcode.cn/problems/reorganize-string/)
+
+给定一个字符串 `s` ，检查是否能重新排布其中的字母，使得两相邻的字符不同。
+
+先统计字符串中的字符出现次数，如果最多的字符出现次数比剩余字符出现次数总和还多2，那么不可能使得两个相邻字符不同。至于排列可以这样做：先把最多的字符排在偶数位置，然后再按照字符遍历字符出现次数，先放偶数位置，再放奇数位置
+
+```python
+def reorganizeString(s: str) -> str:
+	freq = dict(Counter(s))
+	maxv = 0
+	maxk = None
+	for k in freq.keys():  # 获取出现次数最多的字符
+		if freq[k] > maxv:
+			maxv = freq[k]
+			maxk = k
+	n = len(s)
+	if 2 * maxv - n >= 2: return "" 
+	
+	res = [None] * n
+	i = 0
+	while freq[maxk] > 0:  # 先将出现次数最多的字符放置在偶数位
+		res[i] = maxk
+		i += 2
+		freq[maxk] -= 1
+	del freq[maxk]
+	
+	for key in freq.keys():
+		while freq[key] > 0:
+			if i >= n:  # 偶数位已经用完了，后面放到奇数位
+				i = 1
+			res[i] = key
+			freq[key] -= 1
+			i += 2
+	return "".join(res)
+```
+
+
+### 整数替换
+
+[397. 整数替换 - 力扣（LeetCode）](https://leetcode.cn/problems/integer-replacement/description/)
+
+给定一个正整数 `n` ，你可以做如下操作：
+
+1. 如果 `n` 是偶数，则用 `n / 2`替换 `n` 。
+2. 如果 `n` 是奇数，则可以用 `n + 1`或`n - 1`替换 `n` 。
+
+返回 `n` 变为 `1` 所需的 _最小替换次数_ 。
+
+该题可以使用记忆化搜索的方法解决，下面介绍一种贪心算法，我们希望替换的结果尽可能是偶数
+
+当 n 为偶数时，仅有唯一的方法将 `n` 替换为 `n / 2`
+
+当 n 为奇数时，n 除以 4 的余数要么为1，要么为3
+
+1. 如果为1，那么将 n 变为 (n - 1) / 2，这样得到的是偶数
+2. 如果为3，那么将 n 变为 (n +1) / 2，这样得到的也是偶数（注意如果n为3，只需要两次即可，所以需要进行额外处理）
+
+
+```python
+def integerReplacement(n: int) -> int:
+	cnt = 0
+	while n != 1:
+		if n & 1 == 0:
+			n = n >> 1
+			cnt += 1
+		else:
+			if n % 4 == 1:
+				n = (n - 1) >> 1
+				cnt += 2
+			else:
+				if n == 3:
+					n = 1
+					cnt += 2
+				else:
+					n = (n + 1) >> 1
+					cnt += 2
+	return cnt
+```
 
 ## 动态规划
 
@@ -14090,6 +14327,46 @@ def solve(s):
 ```
 
 
+### 判断子序列
+
+[392. 判断子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/is-subsequence/description/)
+
+一般情况下可以使用双指针来判断某个序列是否是另一个序列的子序列
+
+```python
+def isSubsequence(s: str, t: str) -> bool:
+	n1, n2 = len(s), len(t)
+	if n1 == 0: return True
+	i, j = 0, 0
+	while j < n2:
+		if s[i] == t[j]:
+			i += 1
+		if i == n1: break
+		j += 1
+	return i == n1
+```
+
+
+如果需要判断多个序列为某个序列的子序列，可以使用动态规划的方法，先预处理 t，令 `f[i][j]` 表示字符串 `t` 中从位置 `i` 开始往后字符 `j` 第一次出现的位置（包括自身）。
+
+```python
+def isSubsequence(s: str, t: str) -> bool:
+	n, m = len(s), len(t)
+	f = [[0] * 26 for _ in range(m)]
+	f.append([m] * 26)
+
+	for i in range(m - 1, -1, -1):
+		for j in range(26):
+			f[i][j] = i if ord(t[i]) == j + ord('a') else f[i + 1][j]
+	
+	add = 0
+	for i in range(n):
+		if f[add][ord(s[i]) - ord('a')] == m:  # 如果后面没有对应的字符
+			return False
+		add = f[add][ord(s[i]) - ord('a')] + 1 # 跳转至第一次出现
+	
+	return True
+```
 
 ### 最小代价路径
 
