--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -64,6 +64,26 @@ def myAdd(x: float, n: int) -> float:
 ```
 
 
+### 超级次方
+
+[372. 超级次方 - 力扣（LeetCode）](https://leetcode.cn/problems/super-pow/)
+
+本题的幂次通过列表给出，可以对列表的每一位进行求解
+
+$a^{k*10}=(a^{10})^k$ 
+
+$a^{k_1*1000+k_2*100+k_3*10+k_4}=(a^{1000})^{k_1}*(a^{100})^{k_2}*(a^{10})^{k_3}*a^{k_4}$ 
+
+```python
+def superPow(a: int, b: List[int]) -> int:
+	MOD = 1337
+	ans = 1
+	for e in reversed(b):
+		ans = ans * pow(a, e, MOD) % MOD
+		a = pow(a, 10, MOD)
+	return ans
+```
+
 ### 两数相除
 
 [29. 两数相除 - 力扣（LeetCode）](https://leetcode.cn/problems/divide-two-integers/description/)
@@ -309,6 +329,29 @@ class Solution:
 
 ```
 
+
+### 统计各位数字都不同的数字
+
+[357. 统计各位数字都不同的数字个数 - 力扣（LeetCode）](https://leetcode.cn/problems/count-numbers-with-unique-digits/description/)
+
+给你一个整数 `n` ，统计并返回各位数字都不同的数字 `x` 的个数，其中 $0 \le x < 10^n$。
+
+该问题实际上为排列组合问题，我们先计算 n = 1 时的个数为 10，对于 n = 2 时的个数，只需要考虑 10 到 100 之间的两位数即可。首先第一位只能为 1-9 这9个数字，如果为0就变成一位数了，然后为了保证各位都不同，第二位数只能在剩下的9个数字中选择1个，如第一位数为1，则第二位数只能为0、2、3、4、...、9，共有 9 * 9 种可能。对于三位数，同样也有类似的情况，共有 $9 * A_9^2$ 种可能
+
+```python
+def countNumbersWithUniqueDigits(n: int):
+	if n == 0: return 1
+	if n == 1: return 10
+	cnt = 10
+	a = 9
+	b = 8
+	for i in range(2, n+1):
+		cnt += 9 * a
+		a = a * b  # 计算 A(9, i)
+		b -= 1
+	
+	return cnt
+```
 
 ## 位运算
 
@@ -771,7 +814,66 @@ def canArrange(arr: List[int], k: int) -> bool:
 ```
 
 
+### 水壶问题
 
+[365. 水壶问题 - 力扣（LeetCode）](https://leetcode.cn/problems/water-and-jug-problem/description/)
+
+有两个水壶，容量分别为 `x` 和 `y` 升。水的供应是无限的。确定是否有可能使用这两个壶准确得到 `target` 升。
+
+满足两个要求即可
+
+1. x + y >= target
+2. target % (gcd(x, y)) == 0
+
+对于该问题，每次水量的变换只有增加 x，减少 x，增加 y，减少 y，其它变化是没有意义的。如倒空未装满的水壶相当于回到开始的状态，倒满未装满的水壶和直接倒满水壶没有区别。
+
+令 `ax + by = target` 有解的条件是 target 是 x 和 y 的最大公约数的倍数（贝祖定理）
+
+```python
+def canMeasureWater(x: int, y: int, target: int) -> bool:
+	def gcd(a, b):
+		while a % b != 0:
+			r = a % b
+			a = b
+			b = r
+		return b
+
+	return x + y >= target and target % (gcd(x, y)) == 0
+```
+
+下面再来看一种解法，用一个队列保存当前水量，如果出现了目标水量证明有解
+
+```python
+def canMeasureWater(self, x: int, y: int, target: int) -> bool:
+	queue = deque()
+	water = set()  # 保存出现过的水量
+
+	queue.append(0)
+	water.add(0)
+	while queue:
+		n = queue.popleft()
+
+		# 添加四种状态
+		if n - x > 0 and n - x not in water:
+			queue.append(n - x)
+			water.add(n - x)
+		# 需要保证水量不超过整体值
+		if 0 < n + x <= x + y and n + x not in water:
+			queue.append(n + x)
+			water.add(n + x)
+
+		if n - y > 0 and n - y  not in water:
+			queue.append(n - y)
+			water.add(n - y)
+		
+		if 0 < n + y <= x + y and n + y  not in water:
+			queue.append(n + y)
+			water.add(n + y)
+		
+		if target in water:
+			return True
+	return False
+```
 
 ## 数组问题
 
@@ -1784,7 +1886,31 @@ def numberOfArithmeticSlices(nums: List[int]) -> int:
 ```
 
 
-动态规划的方法如下
+上面这个方法的时间复杂度为 $O(n^2)$，为了降低时间复杂度，如果已经求出 `nums[i-1]` 和 `nums[i]` 作为等差数列的最后两项时，答案增加的次数为 $t_i$，那么 $t_{i+1}$ 计算如下
+
++ 如果 `nums[i+1]-num[i] = d`，那么又会多出一个等差数列，$t_{i+1}=t_i+1$
++ 如果不等于 d，那么 $t_{i+1}=0$
+
+```python
+def numberOfArithmeticSlices(nums: List[int]) -> int:
+	n = len(nums)
+	if n <= 2: return 0
+	d = nums[1] - nums[0]
+	t = 0
+	ans = 0
+
+	for i in range(2, n):
+		if nums[i] - nums[i-1] == d:
+			t += 1
+		else:
+			d = nums[i] - nums[i-1]
+			t = 0
+		ans += t
+	
+	return ans
+```
+
+
 
 
 
@@ -2703,6 +2829,37 @@ def kthSmallest(arr, l, r, k):
 
 	# 否则在右边寻找
 	return kthSmallest(arr, index + 1, r, k)
+```
+
+
+### 有序矩阵中的第 k 小的元素
+
+[378. 有序矩阵中第 K 小的元素 - 力扣（LeetCode）](https://leetcode.cn/problems/kth-smallest-element-in-a-sorted-matrix/description/)
+
+给你一个 `n x n` 矩阵 `matrix` ，其中每行和每列元素均按升序排序，找到矩阵中第 `k` 小的元素。请注意，它是 **排序后** 的第 `k` 小元素，而不是第 `k` 个 **不同** 的元素。
+
+使用二分搜索，边界为矩阵最小值和最大值
+
+```python
+def kthSmallest(matrix: List[List[int]], k: int) -> int:
+	n = len(matrix)
+	l, r = matrix[0][0], matrix[-1][-1]
+	ans = l
+	while l <= r:
+		mid = l + (r - l) // 2
+		cnt = 0
+		for i in range(n):
+			for j in range(n):
+				if matrix[i][j] <= mid:
+					cnt += 1
+				else:
+					break
+		if cnt >= k:
+			ans = mid
+			r = mid - 1
+		else:
+			l = mid + 1
+	return ans
 ```
 
 
@@ -6505,6 +6662,52 @@ def removeInvalidParentheses(self, s: str) -> List[str]:
 
 第二种方法，由于是删除最小数量的括号，因此可以使用BFS来解决这一问题，最简单的是尝试删除每个括号，并且用一个集合标记已经访问过的字符串，这样如果能找到合法的字符串就返回（因为这是删除最小数量的结果）
 
+
+### 字典序排数
+
+[386. 字典序排数 - 力扣（LeetCode）](https://leetcode.cn/problems/lexicographical-numbers/description/)
+
+生成 1-n 所有整数，并按照字典序排列
+
+有递归和迭代两种方法
+
+递归
+
+```python
+def lexicalOrder(n: int) -> List[int]:
+	sols = []
+
+	def dfs(num):
+		if num > n:
+			return
+		sols.append(num)
+		for i in range(10):
+			dfs(num * 10 + i)
+
+	for i in range(1, min(10, n+1)):
+		dfs(i)
+	return sols
+```
+
+迭代
+
+```python
+def lexicalOrder(self, n: int) -> List[int]:
+	nums = [0] * n
+	num = 1
+	for i in range(n):
+		nums[i] = num
+
+		if num * 10 <= n:
+			num *= 10
+		else:
+			# 如果num % 10 == 9 或者 num+1>n 证明当前长度已经搜索完了
+			# 退回到上一位
+			while num % 10 == 9 or num + 1 > n:
+				num //= 10
+			num += 1
+	return nums
+```
 
 
 ## 回溯（递归）
@@ -14327,6 +14530,26 @@ def solve(s):
 ```
 
 
+### 猜数字大小Ⅱ
+
+[375. 猜数字大小 II - 力扣（LeetCode）](https://leetcode.cn/problems/guess-number-higher-or-lower-ii/description/)
+
+令 `dp[i][j]` 为从 i 到 j 之间选择一个数字时确保获胜的最小现金数，可以在 i 到 j 之间选择一个数 k 分成两个区间，取其中较大的一个区间 
+`dp[i][j]=min(dp[i][j], k + max(dp[i][k-1], dp[k+1][j])`
+
+```python
+def getMoneyAmount(n: int) -> int:
+	dp = [[0 for i in range(n+1)] for i in range(n+1)]
+	
+	for i in range(n-1, 0, -1):
+		for j in range(i+1, n+1):
+			dp[i][j] = j + dp[i][j-1]
+			for k in range(i, j):
+				dp[i][j] = min(dp[i][j], k + max(dp[i][k-1], dp[k+1][j]))
+	return dp[1][n]
+```
+
+
 ### 判断子序列
 
 [392. 判断子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/is-subsequence/description/)
@@ -14366,6 +14589,63 @@ def isSubsequence(s: str, t: str) -> bool:
 		add = f[add][ord(s[i]) - ord('a')] + 1 # 跳转至第一次出现
 	
 	return True
+```
+
+
+### 最大整除子集
+
+[368. 最大整除子集 - 力扣（LeetCode）](https://leetcode.cn/problems/largest-divisible-subset/)
+
+本题实际在求最长整除子集（和求最长增长序列相似），问题的关键是如何根据动态规划的结果找到对应的子集
+
+下面用一个例子说明如何得到最大整除子集。假设输入数组为 `[2,4,7,8,9,12,16,18]`，得到的动态规划表格如下：
+
+| nums | 2   | 4   | 7   | 8   | 9   | 12  | 16  | 20  |
+| ---- | --- | --- | --- | --- | --- | --- | --- | --- |
+| dp   | 1   | 2   | 1   | 3   | 1   | 3   | 4   | 3   |
+
+得到最大整除子集的做法如下：
+
+1. 根据 dp 的计算结果，maxSize=4，maxVal=16，因此大小为 4 的最大整除子集包含的最大整数为 16；
+
+2. 然后查找大小为 3 的最大整除子集，我们看到 8 和 12 对应的状态值都是 3，最大整除子集一定包含 8，这是因为 16 能够整除 8
+3. 然后查找大小为 2 的最大整除子集，我们看到 4 对应的状态值是 2，最大整除子集一定包含 4；
+4. 然后查找大小为 1 的最大整除子集，我们看到 2 对应的状态值是 1，最大整除子集一定包含 2。
+
+```python
+def largestDivisibleSubset(self, nums: List[int]) -> List[int]:
+	nums.sort()   # 先排序
+	n = len(nums)
+	dp = [0] * n
+	ans = 0
+	# 动态规划求出最长整除子集的长度
+	for i in range(1, n):
+		for j in range(i):
+			if nums[i] % nums[j] == 0:
+				dp[i] = max(dp[i], dp[j] + 1)
+				ans = max(ans, dp[i])
+	# 从最后一位反向找到满足最长长度的子集的最后一个元素
+	idx = n - 1
+	while idx >= 0:
+		if dp[idx] == ans:
+			break
+		idx -= 1
+	arr = [nums[idx]]
+
+	last = nums[idx]   # 将last初始化为最后一个元素
+	ans -= 1
+	# 在前面的序列中找到长度减1并且能够整除的元素
+	while ans >= 0 and idx >= 0:
+		while idx >= 0:
+			if dp[idx] == ans and last % nums[idx] == 0:
+				break
+			idx -= 1
+		arr.append(nums[idx])
+		last = nums[idx]   # 更新last
+		ans -= 1
+		idx -= 1
+
+	return arr
 ```
 
 ### 最小代价路径
