--- a/工具使用.md
+++ b/工具使用.md
@@ -211,6 +211,68 @@ inet 192.168.40.128
 
 
 
+# MNN
+
+一个推理框架
+
+> 可以直接在Github上下载编译好的库
+> 然后用 cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DMNN_BUILD_SHARED_LIBS=OFF -DMNN_WIN_RUNTIME_MT=ON -DMNN_BUILD_CONVERTER=ON 编译转换器
+
+
+
+编译方法参考 [主库编译 — MNN-Doc 2.1.1 documentation](https://mnn-docs.readthedocs.io/en/latest/compile/engine.html#windows-visual-studio-clang) 中的clang编译
+
+首先需要参考[Visual Studio 项目中的 Clang/LLVM 支持 | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/build/clang-support-msbuild?view=msvc-170) 安装clang工具链，可能还需要安装 Win10 的SDK。
+
+编译指令为（下面编译的是Release版本的，还可以换成Debug版本）
+
+```
+cmake .. -G Ninja -DCMAKE_C_COMPILER="D:\VisualStudio\Community\VC\Tools\Llvm\x64\bin\clang.exe" -DCMAKE_CXX_COMPILER="D:\VisualStudio\Community\VC\Tools\Llvm\x64\bin\clang++.exe" -DCMAKE_LINKER="D:\VisualStudio\Community\VC\Tools\Llvm\x64\bin\lld.exe" -DCMAKE_BUILD_TYPE=Release
+```
+
+以及构建指令 
+```
+ninja
+```
+
+
+这里可能会报错 `lld-link: error: undefined symbol: strdup`
+
+这是因为Windows中没有strdup函数，可以在有这个函数的文件中加上宏定义（需要保证引入了string.h）
+
+```c++
+#ifdef _WIN32
+#define strdup _strdup
+#endif
+```
+
+编译成功后会在build文件夹中生成 MNN.lib 和 MNN.dll
+
+
+### 转换模型
+
+对于onnx模型
+
+```sh
+MNNConvert.exe -f ONNX --modelFile msa_dpcrn_fast.onnx --MNNModel msa_dpcrn.mnn
+```
+
+对于pb模型
+
+```sh
+MNNConvert.exe -f TF --modelFile model-mobilenet_v1_075.pb --MNNModel mobile.mnn
+```
+
+### 在 Visual Studio 中使用
+
+先创建一个项目，设置项目属性->C/C++ -> General -> Additional Include Directories 中包括 `E:\work\inference_arch\MNN\include`
+
+设置项目属性 -> Linker -> General -> Additional Library Directories 中包括 `E:\work\inference_arch\MNN\build`
+
+设置项目属性 -> Linker -> Input -> Additional Dependencies 中包括 MNN.lib
+
+在运行项目时，会提示找不到 MNN.dll，可以手动将 dll 文件复制到程序所在文件夹。
+
 # Vim
 
 > `Esc`：进入普通模式（默认打开时的模式），后续介绍均在该模式下
