--- a/计算机科学.md
+++ b/计算机科学.md
@@ -517,10 +517,12 @@ ui8 对应的二进制为 '11011011'、'00001111'、'01001001'、'01000000'
 
 可以看到符号位为 0，代表正数，指数部分为 10000000，尾数部分为 10010010000111111011011
 $$
-E = \sum_{i=23}^{30}b_{i}2^{i-23}=128\\
-F = \sum_{i=1}^{23}b_{23-i}2^{-i}=0.5707963705062866\\
-v = (-1)^0*2^{128-127}*(1+0.5707963705062866)=3.1415927410125732
+\eqalign{
+  & E = \sum\limits_{i = 23}^{30} {{b_i}} {2^{i - 23}} = 128  \cr 
+  & F = \sum\limits_{i = 1}^{23} {{b_{23 - i}}} {2^{ - i}} = 0.5707963705062866  \cr 
+  & v = {( - 1)^0}*{2^{128 - 127}}*(1 + 0.5707963705062866) = 3.1415927410125732 \cr} 
 $$
+
 计算程序如下：
 
 ```python
