--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -160,9 +160,7 @@ def SieveOfEratosthenes(n):
 
 给定一个整数，返回大于等于这个整数的最小回文质数。
 
-这个问题先求所有的回文数，再判断这些数是否为质数
-
-首先需要注意，回文数的长度可以为奇数或者偶数，并且只需要考虑一半就可以了。题目中的要求，整数长度小于等于8，因此回文数的一半的长度在 `[1,5]` 即可。先判断奇数长度的回文数，再判断偶数长度的回文数
+这个问题先求所有的回文数，再判断这些数是否为质数。回文数的长度可以为奇数或者偶数，只需要考虑一半就可以了。题目中的要求，整数长度小于等于8，因此回文数的一半的长度在 `[1,5]` 即可。先判断奇数长度的回文数，再判断偶数长度的回文数
 
 ```python
 def primePalindrome(n: int) -> int:
@@ -199,11 +197,11 @@ def primePalindrome(n: int) -> int:
 ```
 
 
-### 用Rand7() 实现 Rand10()
+### 用 Rand7() 实现 Rand10()
 
 [470. 用 Rand7() 实现 Rand10() - 力扣（LeetCode）](https://leetcode.cn/problems/implement-rand10-using-rand7/)
 
-用Rand7 （会生成 `[1,7]` 均匀分布的数字）实现 Rand10（会生成 `[1,10]` 均匀分布的数字），需要生成均匀分布的数字
+用 Rand7 （会生成 `[1,7]` 均匀分布的数字）实现 Rand10（会生成 `[1,10]` 均匀分布的数字），需要生成均匀分布的数字
 
 考虑 `a = rand7() - 1`，此时 `a = [0, 6]`，将 `a` 乘上 7，就能得到 `[0, 7, 14, 21,..., 42]`，再在 `a` 的基础上加上 `b=rand7()`，这样就能填满中间的空隙，因此只需要前四十个数便能实现
 
@@ -422,7 +420,7 @@ def countSetBits(n):
 ```
 
 
-使用查找表可以将时间复杂度降为1，查找表是一个256位的数组，存储0-255这256个数字中1的个数
+使用查找表可以将时间复杂度降为1，此处的查找表大小设置为256，存储0-255这256个数字中1的个数
 
 ```python
 BitsSetTable256 = [0] * 256
@@ -450,7 +448,7 @@ def countSetBits(n):
 
 该题是 [318. 最大单词长度乘积 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-product-of-word-lengths/description/) 的一个核心问题
 
-使用位运算判断两个单词是否包含相同字符。先对单词进行预处理，一个字母映射到二进制的一位上，判断是否包含相同元素可以通过与操作来完成
+使用位运算判断两个单词是否包含相同字符。先对单词进行预处理，一个字母映射到二进制的一位上，判断是否包含相同元素可以通过与操作来完成，如果有两个单词中包含了相同字符，与操作的结果不为0。
 
 ```python
 for i in range(n):
@@ -593,7 +591,7 @@ def bulbSwitch(n: int) -> int:
 
 ![](https://pic.leetcode-cn.com/1635468492-UWemtI-image.png)
 
-3、`d[i]` 与 `d[i-5]` 相交，此时有 `d[i]+d[i-4] >= d[i-2]`，同时 `d[i-1]<=d[i-3]`，同时 `d[i-2] > d[i-4]`（不满足这个条件会变成第一种情况），同时 `d[i-1]+d[i-5] >= d[i-3]`
+3、`d[i]` 与 `d[i-5]` 相交，此时有 `d[i]+d[i-4] >= d[i-2]`，同时 `d[i-1]<=d[i-3]`（防止 a2 这条线超过了c），同时 `d[i-2] > d[i-4]`（不满足这个条件会变成第一种情况），同时 `d[i-1]+d[i-5] >= d[i-3]`
 
 ![](https://pic.leetcode-cn.com/1635463348-zmNjqd-image.png)
 
@@ -619,11 +617,9 @@ def isSelfCrossing(d) -> bool:
 
 有n个村庄排在一条公路上，村庄之间的距离通过一个数组给出，现在需要为这n个村庄修建车站，但是要求相邻车站的距离必须为1或者某个质数，求最小修建的车站数。
 
-该问题需要用到哥德巴赫猜想，
+该问题需要用到哥德巴赫猜想：大于 2 的偶数可以分解为两个质数，大于 7 的奇数可以分解为三个质数之和。
 
-大于 2 的偶数可以分解为两个质数
-
-大于 7 的奇数可以分解为三个质数之和，由于要求最小修建的车站数，所以对于奇数可以将其先减去2，再判断是否为质数，如果是，需要两个车站，如果不是需要三个车站
+由于要求最小修建的车站数，所以对于奇数可以将其先减去2，再判断是否为质数，如果是，需要两个车站，如果不是需要三个车站
 
 ```python
 def solve(n , a: List):
@@ -718,9 +714,9 @@ def lastRemaining(self, n: int) -> int:
 
 [1503. 所有蚂蚁掉下来前的最后一刻 - 力扣（LeetCode）](https://leetcode.cn/problems/last-moment-before-all-ants-fall-out-of-a-plank/description/)
 
-有一块木板，长度为 `n` 个 **单位** 。一些蚂蚁在木板上移动，每只蚂蚁都以 **每秒一个单位** 的速度移动。其中，一部分蚂蚁向 **左** 移动，其他蚂蚁向 **右** 移动。
+有一块木板，长度为 `n` 个单位 。一些蚂蚁在木板上移动，每只蚂蚁都以每秒一个单位的速度移动。其中，一部分蚂蚁向左移动，其他蚂蚁向右移动。
 
-当两只向 **不同** 方向移动的蚂蚁在某个点相遇时，它们会同时改变移动方向并继续移动。假设更改方向不会花费任何额外时间。
+当两只向不同方向移动的蚂蚁在某个点相遇时，它们会同时改变移动方向并继续移动。假设更改方向不会花费任何额外时间。
 
 而当蚂蚁在某一时刻 `t` 到达木板的一端时，它立即从木板上掉下来。
 
@@ -746,7 +742,7 @@ def getLastMoment(n: int, left: List[int], right: List[int]) -> int:
 
 [343. 整数拆分 - 力扣（LeetCode）](https://leetcode.cn/problems/integer-break/description/)
 
-给定一个正整数 `n` ，将其拆分为 `k` 个 **正整数** 的和（ `k >= 2` ），并使这些整数的乘积最大化。
+给定一个正整数 `n` ，将其拆分为 `k` 个正整数的和（ `k >= 2` ），并使这些整数的乘积最大化。
 
 该问题可以通过动态规划求解，令 `dp[i]` 为正整数 i 的最大乘积，从 1 到 i - 1 遍历 k
 
@@ -792,7 +788,7 @@ def integerBreak(self, n: int) -> int:
 
 暴力求解的复杂度过高，可以采用如下的方法。由 `(a + b) % k == 0` 可得 `(a % k + b % k) % k == 0` ，即 `a % k + b % k == k`，因此先对数组中的所有数对 k 取余，再统计每个余数出现的次数，判断互补的余数的出现次数是否相等
 
->python 中可以直接对负数取余数得到[0, k) 范围内的数字，而对于 C++等语言来说需要加上在取余的结果后面加上 k
+>python 中可以直接对负数取余数得到 `[0, k)` 范围内的数字，而对于 C++等语言来说需要加上在取余的结果后面加上 k，即 `(arr[i] % k + k) % k`
 
 ```python
 def canArrange(arr: List[int], k: int) -> bool:
@@ -1583,12 +1579,23 @@ def nextPermutation(nums: List[int]) -> None:
 
 需要在 `O(n)` 的时间复杂度和常数级别额外空间实现
 
-首先需要将 `x` 放在第 `x-1` 位置
+首先需要将 `x` 放在第 `x-1` 位置，此处需要注意顺序
 
 ```python
 for x in nums:
 	while 1 <= x <= n and x != nums[x - 1]:
 		nums[x - 1], x = x, nums[x - 1]
+```
+
+用 C++ 可以更加直观的显示交换过程
+
+```c++
+while (nums[i] <= n && nums[i] >= 1 && nums[i] != nums[nums[i]-1])
+{
+	int temp = nums[nums[i]-1];
+	nums[nums[i] - 1] = nums[i];
+	nums[i] = temp;
+}
 ```
 
 然后需要判断 `nums[i] != i + 1`，则返回 `i+1`
@@ -1720,7 +1727,7 @@ def removeDuplicates(nums: List[int], k) -> int:
 	idx = 0
 	
 	for i in range(n):
-		if i < k or nums[idx - k] != nums[i]:
+		if i < k or nums[idx - k] != nums[i]:  # 注意这里是 nums[idx-k] != nums[i]
 			nums[idx] = nums[i]
 			idx += 1
 	
@@ -1891,7 +1898,7 @@ def numberOfArithmeticSlices(nums: List[int]) -> int:
 上面这个方法的时间复杂度为 $O(n^2)$，为了降低时间复杂度，如果已经求出 `nums[i-1]` 和 `nums[i]` 作为等差数列的最后两项时，答案增加的次数为 $t_i$，那么 $t_{i+1}$ 计算如下
 
 + 如果 `nums[i+1]-num[i] = d`，那么又会多出一个等差数列，$t_{i+1}=t_i+1$
-+ 如果不等于 d，那么 $t_{i+1}=0$
++ 如果不等于 d，那么更新 d 并且 $t_{i+1}=0$
 
 ```python
 def numberOfArithmeticSlices(nums: List[int]) -> int:
@@ -2148,7 +2155,7 @@ def fourSum(nums, target):
 
 对于一个序列，找到其中的一个最长子序列，使其之和能被 K 整除。
 
-使用一个hash（实际上是字典）保存前缀和及其对应位置
+使用一个 hash（实际上是字典）保存前缀和及其对应位置
 
 ```python
 def longestSubarrayDivK(arr, k):
@@ -2176,7 +2183,7 @@ def longestSubarrayDivK(arr, k):
 ```
 
 存储所有前缀和出现的位置，这样如果再次出现这个前缀和，就证明这两个前缀和中间的序列之和能被 K 整除。
-
+ 
 
 ### 最长子序列之和为 K
 
@@ -2282,7 +2289,8 @@ def printPairs(arr, k):
 		if num >= k:
 			divisors = findDivisors(num - k)
 			for divisor in divisors:
-				# 如果num % divisor = k，并且 num 不等于 divisor，divisor存在于数组中
+				# 如果num % divisor = k，
+				# 并且 num 不等于 divisor，divisor存在于数组中
 				if num % divisor == k and num != divisor and divisor in occ:
 					ans += 1
 
@@ -2924,7 +2932,7 @@ def search(arr: List[int], target: int) -> int:
 	n = len(arr)
 	l, r = 0, n - 1
 
-	while l < r:
+	while l <= r:
 		mid = l + (r - l) // 2
 
 		if arr[mid] == target:
@@ -2944,9 +2952,6 @@ def search(arr: List[int], target: int) -> int:
 				r = mid - 1
 			else:
 				l = mid + 1
-	
-	if arr[l] == target:  # 处理只有一个元素的情况
-		return l
 	return -1
 ```
 
@@ -4411,6 +4416,7 @@ def numDistinct(txt: str, pat: str) -> int:
 	for i in range(1, n1):
 		for j in range(1, n2):
 			if txt[i] == pat[j]:
+			# dp[i-1][j]表示不匹配txt[i]，dp[i-1][j-1] 表示匹配 txt[i]
 				dp[i][j] = dp[i-1][j] + dp[i-1][j-1]
 			else:
 				dp[i][j] = dp[i-1][j]
@@ -4617,6 +4623,27 @@ def maxWater(arr):
     return res
 ```
 
+
+这种做法可以使用两个指针保存左侧最大值和右侧最大值来优化空间，这里直接通过比较 `height[left]` 和 `height[right]` 来判断 `leftMax` 和 `rightMax` 谁更大（直接比较 `leftMax` 和 `rightMax` 似乎也可以），依据为每次都是移动较小的一边，因此如果 `height[left]` < `height[right]`，那么left左侧没有比`height[right]` 更大的，因此 `leftMax < rightMax`
+
+```python
+def trap(height: List[int]) -> int:
+	ans = 0
+	left, right = 0, len(height) - 1
+	leftMax = rightMax = 0
+
+	while left < right:
+		leftMax = max(leftMax, height[left])
+		rightMax = max(rightMax, height[right])
+		if height[left] < height[right]:
+			ans += leftMax - height[left]
+			left += 1
+		else:
+			ans += rightMax - height[right]
+			right -= 1
+	
+	return ans
+```
 
 #### 使用栈
 
@@ -4947,7 +4974,9 @@ def characterReplacement(s: str, k: int) -> int:
 
 给定一个正整数序列，找到一个最大的序列长度，使得所有小于该长度的子序列之和小于k。
 
-该问题可以转为找到一个最小的子序列长度使得其之和大于k，可以使用滑动窗口解决，那么该长度减1，便是最大的序列长度，使得所有小于该长度的子序列之和小于k。
+该题可以用二分搜索，搜索一个长度，计算所有该长度的子序列之和（使用滑动窗口）的最大值，如果这个最大值小于等于k，那么调整下界，否则调整上界。
+
+另一种方法直接使用滑动窗口，该问题可以转为找到一个最小的子序列长度使得其之和大于k，可以使用滑动窗口解决，那么该长度减1，便是最大的序列长度，使得所有小于该长度的子序列之和小于k。
 
 ```python
 def solve(arr, k):
@@ -5015,6 +5044,33 @@ def maxSub(self, arr, m):
 	return maxim
 ```
 
+
+### 连续区间之和整除M
+
+给定一个数组，计算数组中的连续区间之和可以被 M 整除的数量
+
+
+使用前缀和，需要边计算前缀和，边计算区间数
+
+```python
+for i in range(N):   # 先对数组进行取余
+    A[i] %= M
+tot = 0
+freq = defaultdict(int)   # 计算每个余数的出现次数
+freq[0] = 1     # 0 这个余数的初始出现次数为1（即空数组之和为0）
+cnt = 0
+for i in range(N):
+    tot += A[i]
+    tot %= M     # 计算当前和的余数
+    
+    for j in range(M):    # 判断之前的前缀和是否存在满足要求的余数
+        # 如果之前和当前的前缀和之差 tot - j 能够被M整除
+        # 为了避免变成负数，在 tot - j加上M
+        if (tot + M - j) % M == 0:  
+            cnt += freq[j]
+
+    freq[tot] += 1
+```
 
 ### 二维前缀和
 
@@ -5382,7 +5438,7 @@ def minCut(s: str) -> int:
 
 首先求出 `s[i..j]` 变成回文串时的最小修改次数 `cost[i][j]`
 
-令 `dp[i][j]` 为 `s[0:i]` 分为 `j` 个字符串时的最小修改次数，对于第 j 个字符串，可以枚举其开始可能出现的位置 `ii`，`dp[ii][j-1]` 则为`s[0..ii-1]` 分为 `j-1` 个回文字符串的最小修改次数，然后再加上 `s[ii..i-1]` 时的修改次数即可
+令 `dp[i][j]` 为 `s[0:i]` 分为 `j` 个字符串时的最小修改次数，对于第 `j` 个字符串，可以枚举其开始可能出现的位置 `ii`，`dp[ii][j-1]` 则为`s[0..ii-1]` 分为 `j-1` 个回文字符串的最小修改次数，然后再加上 `s[ii..i-1]` 时的修改次数即可
 
 `dp[i][j] = min(dp[i][j], dp[ii][j-1]+cost[ii][i-1])`
 
@@ -5528,7 +5584,7 @@ def palPartitionRec(s, idx, p, sols):
 	temp = ""
 	for i in range(idx, len(s)):
 		temp += s[i]
-		# 注意是i+1，不是 idx + 1
+		# 注意是i+1
 		palPartitionRec(s, i+1, p + [temp], sols)
 sols = []
 palPartitionRec(s, 0, [], sols)
@@ -5564,6 +5620,16 @@ def allPalindromicPerms(s):
 [Check if a string is a scrambled form of another string - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-a-string-is-a-scrambled-form-of-another-string/)
 
 [87. 扰乱字符串 - 力扣（LeetCode）](https://leetcode.cn/problems/scramble-string/description/)
+
+使用下面描述的算法可以扰乱字符串 `s` 得到字符串 `t` ：
+
+1. 如果字符串的长度为 1 ，算法停止
+2. 如果字符串的长度 > 1 ，执行下述步骤：
+    - 在一个随机下标处将字符串分割成两个非空的子字符串。即，如果已知字符串 `s` ，则可以将其分成两个子字符串 `x` 和 `y` ，且满足 `s = x + y` 。
+    - **随机** 决定是要「交换两个子字符串」还是要「保持这两个子字符串的顺序不变」。即，在执行这一步骤之后，`s` 可能是 `s = x + y` 或者 `s = y + x` 。
+    - 在 `x` 和 `y` 这两个子字符串上继续从步骤 1 开始递归执行此算法。
+
+给你两个 **长度相等** 的字符串 `s1` 和 `s2`，判断 `s2` 是否是 `s1` 的扰乱字符串。如果是，返回 `true` ；否则，返回 `false` 。
 
 
 ```python
@@ -5778,7 +5844,7 @@ def solve(s):
 [Length of Longest Balanced Subsequence - GeeksforGeeks](https://www.geeksforgeeks.org/length-longest-balanced-subsequence/)
 
 
-使用动态规划解决这个问题，`dp[i][j]` 表示 `s[i..j]` 的最长平衡子序列，如果 `s[i]==s[j]`，那么最长平衡子序列在 `dp[i+1][j-1]` 的基础上加 2，然后在 i 到 j 之间选择一点将子序列分为两部分，两部分的最长平衡子序列取总和
+使用动态规划解决这个问题，`dp[i][j]` 表示 `s[i..j]` 的最长平衡子序列，如果 `s[i]==s[j]`，那么最长平衡子序列在 `dp[i+1][j-1]` 的基础上加 2，然后在 `i` 到 `j` 之间选择一点将子序列分为两部分，两部分的最长平衡子序列取总和
 
 在初始化时，先将所有连续的匹配括号赋值
 
@@ -6185,8 +6251,9 @@ def solve(mat, word):
             mat[x][y] = "#"   # 标记此处已经搜索过了
 
             result = _solve(mat, word, x + 1, y, idx+1) or \
-            _solve(mat, word, x-1, y, idx+1) or _solve(mat, word, x, y+1, idx+1) \
-            or _solve(mat, word, x, y- 1, idx+1)
+            _solve(mat, word, x-1, y, idx+1) or \
+            _solve(mat, word, x, y+1, idx+1) or \
+            _solve(mat, word, x, y- 1, idx+1)
 
             mat[x][y] = temp
 
@@ -6262,7 +6329,7 @@ def findWords(board, words):
 					dfs(ni, nj, nxt)
 			board[i][j] = ch
 		
-		if not nxt.children:  # 去除空节点
+		if not nxt.children:  # 去除空节点，可加可不加
 			now.children.pop(ch)
 
 	for i in range(m):
@@ -6506,8 +6573,8 @@ def shortestPalindrome(s: str) -> str:
 	best = -1
 	
 	for i in range(n):
-		left = (left * base + ord(s[i])) % mod    # 分别从两边开始算
-		right = (right + mul * ord(s[i])) % mod
+		left = (left * base + ord(s[i])) % mod    # 从左侧算哈希值
+		right = (right + mul * ord(s[i])) % mod   # 从右侧算哈希值
 		if left == right:
 			best = i
 		mul = mul * base % mod
@@ -6947,7 +7014,7 @@ def addOperators(num: str, target: int) -> List[str]:
 				backtrack(expr, j + 1, val, val)
 			else:  # 枚举符号
 				expr[signIndex] = '+'
-				backtrack(expr + ["+"] +, j + 1, res + val, val)
+				backtrack(expr + ["+"], j + 1, res + val, val)
 				expr[signIndex] = '-'
 				backtrack(expr + ["-"], j + 1, res - val, -val)
 				expr[signIndex] = '*'
@@ -6965,7 +7032,6 @@ def addOperators(num: str, target: int) -> List[str]:
 [698. 划分为k个相等的子集 - 力扣（LeetCode）](https://leetcode.cn/problems/partition-to-k-equal-sum-subsets/description/)
 
 给定一个整数数组  `nums` 和一个正整数 `k`，找出是否有可能把这个数组分成 `k` 个非空子集，其总和都相等。
-
 
 首先计算总和，如果总和不能被 k 整除，那么肯定不能划分。然后对数组进行排序，方便剪枝。由于元素数量少，这里用一个数字来表示数组中哪些元素可选。
 
@@ -7873,7 +7939,7 @@ def solve_dp(mat):
 
 只允许每次在矩阵的某行某列加1，问这样的操作能否使得两个矩阵相等，如果可以求出最小转换次数
 
-如何判断两个矩阵能否通过加1相等，有下面的推到
+如何判断两个矩阵能否通过加1相等，有下面的推导
 
 
 ```
@@ -8804,7 +8870,7 @@ def removeDuplicateLetters(s: str):
 	
 	stack = []
 	for c in s:
-		if not vis[ord(c) - ord('a')]:  # 如果元素还未入栈
+		if not vis[ord(c) - ord('a')]:  # 字符未入栈
 			while len(stack) and stack[-1] > c:  # 如果栈尾字符大于当前字符
 				# 如果后面还有栈尾字符，弹出栈尾字符
 				if cnt[ord(stack[-1]) - ord('a')] > 0:  
@@ -9116,7 +9182,9 @@ def dfs(start: int, end: int, visited: List[bool], V: int) -> bool:
 
 在完成一些课程之前需要前置课程，给定课程和前置课程，求是否能学完所有的课程
 
-可以使用DFS来解决该问题，不过需要注意的是，为了防止出现环，需要加入一个栈递归判断，如果出现了环，证明不可能学完所有的课程
+使用拓扑排序解决，拓扑排序可以选择DFS或者BFS实现。
+
+DFS解决该问题时，需要注意的是，为了防止出现环，需要加入一个栈递归判断，如果出现了环，证明不可能学完所有的课程
 
 ```python
 def canFinish(numCourses: int, prerequisites: List[List[int]]) -> bool:
@@ -9150,7 +9218,7 @@ def canFinish(numCourses: int, prerequisites: List[List[int]]) -> bool:
 ```
 
 
-另一种方法是使用BFS，最开始能学的课程一定是没有前置课程的，即入度为0，将入度为0的节点全部放入队列中，取出一个节点时，删除该节点相关的所有出度，如果有节点的入度变为0，再将其加入队列，如果最后所有课程都能学习，即加入过队列的节点数量等于整个图的节点数量
+另一种方法是使用BFS，最开始能学的课程一定是没有前置课程的，即入度为0，将入度为 0 的节点全部放入队列中，取出一个节点时，删除该节点相关的所有出度，如果有节点的入度变为0，再将其加入队列，如果最后所有课程都能学习，即加入过队列的节点数量等于整个图的节点数量
 
 ```python
 def canFinish(numCourses: int, prerequisites: List[List[int]]) -> bool:
@@ -10692,7 +10760,7 @@ def pruneTree(root: Optional[TreeNode]) -> Optional[TreeNode]:
 
 [109. 有序链表转换二叉搜索树 - 力扣（LeetCode）](https://leetcode.cn/problems/convert-sorted-list-to-binary-search-tree/description/)
 
-这里需要使用快慢指针找到中点，不过这里需要注意一下，需要找到中点的前一个节点，因此快慢指针有需要特殊的写法
+这里需要使用快慢指针找到中点，不过这里需要注意一下，需要找到中点的前一个节点，因此快慢指针需要特殊的写法
 
 ```python
 def sortedListToBST(head):
@@ -11956,7 +12024,7 @@ class SegTree:
         if pos <= m:
             self.update(node * 2, pos, val)
         else:
-            self.update(node*2 + 1, pos, val)
+            self.update(node * 2 + 1, pos, val)
         self.merge(node)
 
 n, q = map(int, input().split())
@@ -12691,26 +12759,26 @@ def findAllTopologicalOrders(graph, path, discovered, N):
 
 
 ```python
-def findItinerary(self, tickets: List[List[str]]) -> List[str]:
-        adj = defaultdict(list)
-        for i in range(len(tickets)):
-            adj[tickets[i][0]].append(tickets[i][1])        
-        for k in list(adj.keys()):
-            heapq.heapify(adj[k])
+def findItinerary(tickets: List[List[str]]) -> List[str]:
+	adj = defaultdict(list)
+	for i in range(len(tickets)):
+		adj[tickets[i][0]].append(tickets[i][1])        
+	for k in list(adj.keys()):
+		heapq.heapify(adj[k])
 
-        min_path = []
-        n = len(tickets)
+	min_path = []
+	n = len(tickets)
 
-        def dfs(s):
-            while adj[s]:
-                dist = heapq.heappop(adj[s])
-                dfs(dist)
-            
-            min_path.append(s)  # 先遍历结点，再将结点入栈
-            
-        dfs("JFK")
+	def dfs(s):
+		while adj[s]:
+			dist = heapq.heappop(adj[s])
+			dfs(dist)
+		
+		min_path.append(s)  # 先遍历结点，再将结点入栈
+		
+	dfs("JFK")
 
-        return min_path[::-1]  # 逆序输出结果
+	return min_path[::-1]  # 逆序输出结果
 ```
 
 ### 有向无环图的最长路径
@@ -13481,7 +13549,6 @@ def distanceK(root: TreeNode, target: TreeNode, k: int) -> List[int]:
 ```
 
 
-
 ### 获取所有钥匙的最短路径
 
 [864. 获取所有钥匙的最短路径 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-path-to-get-all-keys/description/)
@@ -13610,7 +13677,7 @@ def findJudge(n: int, trust) -> int:
 
 [785. 判断二分图 - 力扣（LeetCode）](https://leetcode.cn/problems/is-graph-bipartite/)
 
-用染色法判断，首先随便选一个点 `i` 进行染色，然后对于邻接节点，如果未染色，将其邻接节点染成另一个颜色，如果染了和点 `i` 相同的颜色，就证明这个图不是二分图。具体可以用DFS 或者 BFS进行遍历
+用染色法判断，首先随便选一个点 `i` 进行染色，然后对于邻接节点，如果未染色，将其邻接节点染成另一个颜色，如果染了和点 `i` 相同的颜色，就证明这个图不是二分图。具体可以用 DFS 或者 BFS进行遍历
 
 ```python
 def isBipartite(graph: List[List[int]]) -> bool:
@@ -14005,7 +14072,7 @@ for i in range(n, 0, -1):
 
 `dp[i][j] = max(dp[i-1][j], profit[i] + dp[i-1][j-weights[i]])`
 
-改为
+加上一个再次选择当前物品 `profit[i]+dp[i][j-weights[i]]`
 
 `dp[i][j] = max(dp[i-1][j], profit[i] + dp[i][j-weights[i]], profit[i] + dp[i-1][j-weights[i]])` 即可
 
@@ -14040,7 +14107,7 @@ def solve(start, end):
 
 类似的问题还有 [435. 无重叠区间 - 力扣（LeetCode）](https://leetcode.cn/problems/non-overlapping-intervals/description/)，按照右端点排序，先选择右端点最小的区间，然后判断下一个区间是否可选，如果可选，更新右端点，统计选择的区间数。
 
-类似的还有 [452. 用最少数量的箭引爆气球 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-number-of-arrows-to-burst-balloons/description/)，先按照右端点排序，先对第一个气球的右端点射出一只箭，计算这只箭能够覆盖的区间范围。如果不能覆盖，则再对着右端点射出一只箭。
+类似的还有 [452. 用最少数量的箭引爆气球 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-number-of-arrows-to-burst-balloons/description/)，先按照右端点排序，先对第一个气球的右端点射出一只箭，计算这只箭能够覆盖的区间范围。如果不能覆盖，则再对着新的右端点射出一只箭。
 
 
 
@@ -14144,7 +14211,7 @@ def JobSequencing(id, deadline, profit):
 
 	jobs = list(zip(profit, deadline))
 
-	# 根据截至时间排序工作
+	# 根据截止时间排序工作
 	jobs.sort(key=lambda x: (x[1], -x[0]))
 
 	# 最小堆
@@ -14291,6 +14358,10 @@ def maxArea(height) -> int:
 ### 按要求补齐数组
 
 [330. 按要求补齐数组 - 力扣（LeetCode）](https://leetcode.cn/problems/patching-array/description/)
+
+给定一个已排序的正整数数组 `nums` ，和一个正整数 `n` 。从 `[1, n]` 区间内选取任意个数字补充到 nums 中，使得 `[1, n]` 区间内的任何数字都可以用 nums 中某几个数字的和来表示。
+
+请返回 _满足上述要求的最少需要补充的数字个数_ 。
 
 对于正整数 x，如果区间 `[1, x-1]` 内的所有数字都已经被覆盖，且 `x` 在数组中，则区间 `[1, 2x-1]` 都被覆盖。
 
@@ -14472,7 +14543,6 @@ def reorganizeString(s: str) -> str:
 1. 如果为1，那么将 n 变为 (n - 1) / 2，这样得到的是偶数
 2. 如果为3，那么将 n 变为 (n +1) / 2，这样得到的也是偶数（注意如果n为3，只需要两次即可，所以需要进行额外处理）
 
-
 ```python
 def integerReplacement(n: int) -> int:
 	cnt = 0
@@ -14492,6 +14562,30 @@ def integerReplacement(n: int) -> int:
 					n = (n + 1) >> 1
 					cnt += 2
 	return cnt
+```
+
+
+
+### 字符变换
+
+可以对字符串进行若干次变换操作:
+
+1. 交换任意两个相邻的字符，代价为0。
+2. 将任意一个字符a修改成字符b，代价为 |a - b|（绝对值）。
+
+现在有两个长度相同的字符串X和Y，求出如果要将X和Y变成两个一样的字符串，需要的最少的代价之和是多少。
+
+本题使用贪心的思想，为了使得修改的代价最小，需要让两个字符串的相对距离最小，因此可以先排序字符串，然后再遍历两个字符串，对应位置的字符相减
+
+```python
+s1 = sorted(s1)
+s2 = sorted(s2)
+
+cnt = 0
+for i in range(len(s1)):
+	cnt += abs(ord(s1[i])- ord(s2[i]))
+
+print(cnt)
 ```
 
 ## 动态规划
@@ -14780,7 +14874,6 @@ def solve(arr, s):
     res = _solve(arr, s, 0)
     return res
 ```
-
 
 动态规划，`dp[i][s]` 表示使用 `arr[0:i]` 能否找到一个子集和为 s，如果 s 为 0，那么必定可以。
 
@@ -17001,7 +17094,7 @@ def solve(W, arr):
 
 将 8 个数和一个空白区域组成的一个 3×3 网格中移动数字，使其符合某个预定的状态
 
-可以使用DFS或者BFS解决，以BFS为例，用一个队列保存当前状态，将空白区域向四个方向移动，得到四个状态（需要用一个矩阵保存已经访问过的状态）
+可以使用 DFS 或者 BFS 解决，以 BFS 为例，用一个队列保存当前状态，将空白区域向四个方向移动，得到四个状态（需要用一个矩阵保存已经访问过的状态）
 
 DFS类似，用一个栈保存状态
 
