--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -14626,6 +14626,66 @@ def solve(s):
 ```
 
 
+### 购物单
+
+[购物单_牛客题霸_牛客网](https://www.nowcoder.com/practice/f9c6f980eeec43ef85be20755ddbeaf4?tpId=37&tqId=21229&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3FtpId%3D37&difficulty=undefined&judgeStatus=undefined&tags=&title=)
+
+背包问题的变体，有若干个物品可供购买，物品分为主物品和附属物品，一个主物品最多有两个附属物品，每个物品都有价格和重要程度，求固定预算下购买物品所得的最大满意度
+
+1、满意度为价格和重要程度的乘积
+2、购买附属物品前必须购买主物品
+
+
+对于该问题，可以将其转换为背包问题，对于一个主物品，有四种可能，分别为只购买主物品、购买主物品+附属物品1、购买主物品+附属物品2以及购买主物品和所有的附属物品。
+
+```python
+import sys
+
+n, m = map(int, sys.stdin.readline().split())
+
+vs, ws, qs = [], [], []
+for i in range(m):
+    price, satisfaction, q = map(int, sys.stdin.readline().split())
+    vs.append(price)
+    ws.append(satisfaction)
+    qs.append(q - 1)
+
+# 记录主物品对应的附属物品
+items = [[] for _ in range(m)]
+
+for i in range(len(qs)):
+    if qs[i] != -1:
+        items[qs[i]].append(i)
+
+# 记录每种物品的可选情形
+chooses = [[] for _ in range(m)]
+
+for i in range(m):
+    if qs[i] == -1:
+        chooses[i].append((vs[i], ws[i] * vs[i]))  # 只选择主物品
+        # 选择主物品和一个附属物品
+        for it in items[i]:
+            chooses[i].append((vs[i] + vs[it], ws[i] * vs[i] + ws[it] * vs[it]))
+        # 如果有两个物品，再加上两个物品都选择的情况
+        if len(items[i]) == 2:
+            it1, it2 = items[i]
+            chooses[i].append((vs[i] + vs[it1] + vs[it2], 
+            vs[i] * ws[i] + vs[it1] * ws[it1] + vs[it2] * ws[it2]))
+
+dp = [0 for _ in range(n+1)]
+
+for i in range(1, m + 1):
+    for j in range(n, -1, -10):
+        max_choose = dp[j]
+        for k in range(len(chooses[i - 1])):
+            price, satisfaction = chooses[i - 1][k]
+            if j >= price:
+                max_choose = max(max_choose, satisfaction + dp[j - price])
+        dp[j] = max_choose
+print(dp[n])
+```
+
+
 ### 猜数字大小Ⅱ
 
 [375. 猜数字大小 II - 力扣（LeetCode）](https://leetcode.cn/problems/guess-number-higher-or-lower-ii/description/)
@@ -15848,7 +15908,7 @@ def isMatch(s: str, p: str) -> bool:
 		for j in range(1, n+1):
 			if p[j-1] == "*":
 				dp[i][j] |= dp[i][j-2]
-				if match(i, j-1):
+				if match(i, j-1): # 如果s[:i] 和 p[:j-1]匹配,* 匹配字符
 					dp[i][j] |= dp[i-1][j]
 			else:
 				if match(i, j):
