--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -12935,6 +12935,62 @@ def articulationPoints(adj):
 ```
 
 
+### 素数伴侣
+
+[素数伴侣_牛客题霸_牛客网](https://www.nowcoder.com/practice/b9eae162e02f4f928eac37d7699b352e?tpId=37&tags=&title=&difficulty=0&judgeStatus=0&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3FtpId%3D37)
+
+如果两个正整数 a 和 b 满足 a + b 是一个素数，那么 a 和 b 是素数伴侣。从给定的 n 个正整数 $\{a_1, a_2, ..., a_n\}$ 中找到最多的素数伴侣的数量。
+
+这道题使用匈牙利算法进行二分匹配，首先需要注意到的是只有奇数才有可能是素数，因此只能奇数加偶数，因此可以将所有的数字分为奇数和偶数，利用匈牙利算法求出最大匹配。
+
+
+```python
+import sys
+
+n = int(sys.stdin.readline()[0])
+arr = map(int, sys.stdin.readline().split())
+
+odds = []
+evens = []
+
+# 分成奇数和偶数
+for a in arr:
+    if a & 1 == 1:
+        odds.append(a)
+    else:
+        evens.append(a)
+# 判断素数
+def isPrime(x):
+    high = int(x ** 0.5) + 2
+    for i in range(3, high, 2):
+        if x % i == 0:
+            return False
+    return True
+
+# 匈牙利匹配算法
+def find(x, me, evens, v):
+    for i in range(len(evens)):
+        if isPrime(x + evens[i]) and not v[i]:
+            v[i] = True
+            if me[i] == 0 or find(me[i], me, evens, v):
+                me[i] = x
+                return True
+    return False
+
+matcheven = [0] * len(evens)
+
+cnt = 0
+
+for j in range(len(odds)):
+    v = [False] * len(evens)
+    if find(odds[j], matcheven, evens, v):
+        cnt += 1
+
+print(cnt)
+```
+
+
+
 ### 查找集群中的关键连接
 
 该问题相当于求割边。只有环路中的边删除才能保持连接，非环路的边为割边。为了求出非环路的边，给所有的节点赋一个初始ID，一个回路的所有节点共享一个ID，并取最小值，因此环路中的所有节点和入环的节点的ID相同，如果父节点 `p` 到入环节点 `i` 的路径不构成一条边，那么入环节点ID和其初始ID是相同的，所以 `(p,i)` 是一条割边
