--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -351,6 +351,44 @@ def countNumbersWithUniqueDigits(n: int):
 	return cnt
 ```
 
+
+### 24点
+
+[24点游戏算法_牛客题霸_牛客网](https://www.nowcoder.com/practice/fbc417f314f745b1978fc751a54ac8cb?tpId=37&tags=&title=&difficulty=0&judgeStatus=0&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3Fpage%3D2%26tpId%3D37%26type%3D37)
+
+```python
+import itertools
+import sys
+arr = list(map(int, sys.stdin.readline().split()))
+
+def valid24(nums):
+    # 所有排列顺序
+    for a, b, c, d in itertools.permutations(nums):
+        # 所有运算符组合（3 个位置）
+        for op1, op2, op3 in itertools.product("+-*/", repeat=3):
+            # 所有可能的括号组合方式
+            expressions = [
+                f"(({a}{op1}{b}){op2}{c}){op3}{d}",
+                f"({a}{op1}({b}{op2}{c})){op3}{d}",
+                f"{a}{op1}(({b}{op2}{c}){op3}{d})",
+                f"{a}{op1}({b}{op2}({c}{op3}{d}))",
+                f"({a}{op1}{b}){op2}({c}{op3}{d})"
+            ]
+
+            for expr in expressions:
+                try:
+                    if abs(eval(expr) - 24) < 1e-6:
+                        return True
+                except ZeroDivisionError:
+                    continue
+    return False
+
+if valid24(arr):
+    print("true")
+else:
+    print("false")
+```
+
 ## 位运算
 
 ### 小鼠和毒药问题
@@ -870,6 +908,54 @@ def canMeasureWater(self, x: int, y: int, target: int) -> bool:
 			return True
 	return False
 ```
+
+
+### 完全数计算
+
+[完全数计算_牛客题霸_牛客网](https://www.nowcoder.com/practice/7299c12e6abb437c87ad3e712383ff84?tpId=37&tags=&title=&difficulty=0&judgeStatus=0&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3FtpId%3D37)
+
+完全数，又称完美数或完备数，是一些特殊的自然数。它所有的真因子（即除了自身以外的约数）之和恰好等于它本身。 计算 1 到 n 之间完全数的个数。
+
+关于完全数有一个结论：如果 $2^p-1$ 是质数，那么 $(2^p-1) \times 2^{p-1}$ 为完全数
+
+如果 n 的范围较小，可以直接枚举计算，由于因子都是分布在平方的两边，可以从平方开始计算
+
+```python
+from math import sqrt
+import sys
+
+n = int(sys.stdin.readline().split()[0])
+
+if n < 6:
+    print(0)
+elif n < 27:
+    print(1)
+elif n < 29:
+    print(2)
+else:
+    cnt = 2
+    sols = []
+    for i in range(29, n):
+        res = 1
+        j = int(sqrt(i))
+        if i % j == 0 and i // j == j:
+            res += j
+        j -= 1
+        while j > 1:
+            if i % j == 0:
+                res += j
+                res += i // j
+            if res > n:
+                break
+
+            j -= 1
+        
+        if res == i:
+            cnt += 1
+
+    print(cnt)
+```
+
 
 ## 数组问题
 
@@ -7666,6 +7752,76 @@ def isAdditiveNumber(self, num: str) -> bool:
 [The Knight's tour problem - GeeksforGeeks](https://www.geeksforgeeks.org/the-knights-tour-problem/)
 
 
+### 放苹果
+
+[放苹果_牛客题霸_牛客网](https://www.nowcoder.com/practice/bfd8234bb5e84be0b493656e390bdebf?tpId=37&tags=&title=&difficulty=0&judgeStatus=0&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3FtpId%3D37)
+
+将 m 个相同的苹果放入 n 个相同的盘子中，允许有的盘子空着不放。求解有多少种不同的分法。
+
+
+- 递归退出条件：
+    - 如果没有苹果，则说明放置已经完成，方案已定，无需计算
+    - 如果有一个苹果，则放在剩下哪一个盘子中都是一样的，因此方案数也是1
+    - 如果只有一个盘子，则手上的苹果必须全部放在这一个盘子中，因此方案数也是1
+- 如果盘子数量大于苹果数量
+    - 则必定有n-m个盘子空着，所以必定的事件不会影响方案数
+- 如果盘子数量小于等于苹果数量
+    - 则考虑是不是要放满所有的盘子
+    - 如果要空一个盘子，则有solution(m,n-1)种方案
+    - 如果不要空这些盘子，则相当于所有盘子里至少会放一个苹果，那就相当于在每个盘子里都放一个苹果，这些苹果不影响方案数量，因此有solution(m-n,n)种方案
+
+
+```python
+import sys
+
+m, n = map(int, sys.stdin.readline().split())
+
+def place(m, n):
+    if m < 0 or n < 0:
+        return 0
+    if m == 1 or n == 1:   # 如果只有一个苹果或者一个盘子，只有一种放法
+        return 1
+    # place(m, n-1) 当前盘子不放，place(m-n, n) 在当前的n个盘子中都放一个苹果
+    return place(m, n-1) + place(m-n, n)
+
+print(place(m, n))
+```
+
+
+### 出栈顺序
+
+[火车进站_牛客题霸_牛客网](https://www.nowcoder.com/practice/97ba57c35e9f4749826dc3befaeae109?tpId=37&tags=&title=&difficulty=0&judgeStatus=0&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3Fpage%3D2%26tpId%3D37%26type%3D37)
+
+给定进站顺序，给出所有的出栈顺序
+
+```python
+import sys
+
+n = int(sys.stdin.readline().split()[0])
+arr = list(map(int, sys.stdin.readline().split()))
+
+sol = []
+
+
+def dfs(stack, idx, ou_stack):
+    if len(stack) == 0 and idx == n:
+        sol.append(" ".join(map(str, ou_stack)))
+        return
+
+    if idx < n:   # 如果还可以入栈
+        dfs(stack + [arr[idx]], idx + 1, ou_stack)
+    if len(stack) > 0:  # 如果还可以出栈
+        p = stack.pop()
+        dfs(stack, idx, ou_stack + [p])
+
+
+dfs([], 0, [])
+sol.sort()
+for i in range(len(sol)):
+    print(sol[i])
+```
+
+
 ## 矩阵
 
 
@@ -8552,7 +8708,7 @@ def solve(s):
 
 [Convert Infix expression to Postfix expression - GeeksforGeeks](https://www.geeksforgeeks.org/convert-infix-expression-to-postfix-expression/)
 
-遇到操作符，比较操作符和目前栈顶的操作符的优先级顺序（`(`的运算级顺序设为最低），如果大于压入栈，小于等于就出栈，遇到操作数就放入结果中，遇到 `(` 直接入栈，遇到 `)` 出栈直到遇到 `(`
+遇到操作符，比较操作符和目前栈顶的操作符的优先级顺序（`(`的运算级顺序设为最低），如果大于压入栈，小于等于就出栈，出栈的操作符加在结果中，遇到操作数就放入结果中，遇到 `(` 直接入栈，遇到 `)` 出栈（出栈结果加在结果中）直到遇到 `(`
 
 [Postfix to Infix - GeeksforGeeks](https://www.geeksforgeeks.org/postfix-to-infix/)
 
@@ -11802,6 +11958,12 @@ class DisjointSet:
             self.rank[ir] += 1
 ```
 
+
+### 隐匿社交网络
+
+[隐匿社交网络_牛客题霸_牛客网](https://www.nowcoder.com/practice/2870f9db6aeb4eb08fbd6460397f9bf4?tpId=37&tqId=43271&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3Fpage%3D2%26tpId%3D37%26type%3D37&difficulty=undefined&judgeStatus=undefined&tags=&title=)
+
+将权重转为二进制，如果对应位为1，将这些合并起来
 
 ### 字典序的第 K 小数字
 
@@ -15683,7 +15845,7 @@ def solve(k, r, c):
 
 
 
-### 最大增长子序列
+### 最长递增子序列
 
 [Longest Increasing Subsequence (LIS) - GeeksforGeeks](https://www.geeksforgeeks.org/longest-increasing-subsequence-dp-3/)
 
@@ -16000,7 +16162,7 @@ def isMatch(s: str, p: str) -> bool:
 		if i == 0: return False
 		if p[j-1] == "?": return True
 		return s[i-1] == p[j-1]
-	last_i = 0
+
 	for i in range(m+1):
 		for j in range(1, n+1):
 			if p[j-1] == "*":
@@ -16011,7 +16173,7 @@ def isMatch(s: str, p: str) -> bool:
 	return dp[m][n]
 ```
 
-
+变体：[字符串通配符_牛客题霸_牛客网](https://www.nowcoder.com/practice/43072d50a6eb44d2a6c816a283b02036?tpId=37&tags=&title=&difficulty=0&judgeStatus=0&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3Fpage%3D2%26tpId%3D37%26type%3D37)
 
 
 ### 形成回文字符串的最小插入次数
